<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:id="@+id/border"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        android:layout_margin="@dimen/_7sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_permission"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:id="@+id/changeMode"
            android:textSize="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"/>

    </LinearLayout>
    <!--ROLE SECTION-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sectionEmail">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/roleList"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/amount_layout"
            android:layout_below="@id/roleList">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/amount"
                    android:paddingLeft="25dp"
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"/>

                <EditText
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/enter_amount"
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:id="@+id/amount"
                    android:fontFamily="@font/poppins_regular"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>



            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/choose_currency"
                    android:paddingLeft="25dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/select"
                    android:focusable="false"
                    android:completionThreshold="1"
                    android:id="@+id/currency"
                    android:fontFamily="@font/poppins_regular"
                    android:textColorHint="@color/black"
                    android:drawableEnd="@drawable/down_arrow"
                    android:textColor="@color/black"
                    android:paddingLeft="5dp"
                    android:textSize="14dp"/>



            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="bottom"
            android:layout_below="@+id/amount_layout"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="vertical"
                android:id="@+id/save"
                android:clickable="true"
                android:background="@drawable/gradiant_button_background"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/btnText"
                    android:fontFamily="@font/poppins_bold"
                    android:id="@+id/changeButtonName"
                    android:textSize="@dimen/_18sdp"
                    android:text="@string/save"/>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>