<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:id="@+id/border"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        android:layout_margin="@dimen/_7sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:id="@+id/changeMode"
            android:textSize="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!--Update Password SECTION-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/sectionPassword">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_current_password"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <EditText
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/oldPassword"
                android:id="@+id/oldPassword"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:drawablePadding="12dp"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/eye_btn_fp_old"
                    android:layout_width="50dp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="right"
                    android:onClick="show_pass"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:src="@drawable/hide"
                    tools:ignore="OnClick" />

            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <EditText
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:drawablePadding="12dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/eye_btn_fp"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="right"
                    android:onClick="show_pass"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:src="@drawable/hide"
                    tools:ignore="OnClick" />

            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_confirm_password"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_8sdp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <EditText
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/re_password"
                android:id="@+id/cnfPassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:drawablePadding="12dp"
                android:textColorHint="@color/black"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/eye_btn_cnf"
                    android:layout_width="50dp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="right"
                    android:onClick="show_pass"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:src="@drawable/hide"
                    tools:ignore="OnClick" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="vertical"
                android:id="@+id/updatePass"
                android:clickable="true"
                android:background="@drawable/gradiant_button_background"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/btnText"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/_18sdp"
                    android:text="Update Password"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>